# eve-sde-to-sqlite

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-01-18-eve-sde-to-sqlite-design.md  2026-01-18-eve-sde-to-sqlite-implementation.md
src/: cli.rs  filter.rs  lib.rs  main.rs
src/download/: cache.rs  client.rs  extract.rs  mod.rs
src/parser/: record.rs
src/schema/: dependencies.rs  mod.rs  tables.rs  types.rs
src/ui/: components.rs  mod.rs
src/writer/: mod.rs  schema_gen.rs  sqlite.rs
tests/: integration_test.rs
